--- a/apps/react-app/package.json
+++ b/apps/react-app/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "utils": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
