--- a/libs/utils/tsconfig.json
+++ b/libs/utils/tsconfig.json
@@ -19,6 +19,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
-  }
-  // "include": ["src/**/*"]
+  },
+  "include": ["src"]
 }
